Fix branch name in github action

--- a/.github/workflows/build-native-docker-action.yml
+++ b/.github/workflows/build-native-docker-action.yml
@@ -2,7 +2,7 @@ name: build-native-docker-and-deploy
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   native_build:
     runs-on: ubuntu-latest
