--- a/.github/workflows/build-native-docker-action.yml
+++ b/.github/workflows/build-native-docker-action.yml
@@ -9,9 +9,38 @@ jobs:
     name: Build native Quarkus app
     steps:
       - name: Checkout the code
-        uses: actions/checkout@master
-      - name: Build native executable and upload it as an artifact
-        uses: maxday/quarkus-native-build-docker-action@13bf5c4ae6942143cf43a5663a6c7f847ac3163c
+        uses: actions/checkout@v3
+      - name: Setup GraalVM
+        uses: graalvm/setup-graalvm@v1
         with:
-          outputName: bubble-share-runner
-          dockerfilePath: src/main/docker/Dockerfile.native-micro
+          version: 'latest'
+          java-version: '17'
+          components: 'native-image'
+      - name: Debug Info
+        run: |
+          echo "GRAALVM_HOME: $GRAALVM_HOME"
+          echo "JAVA_HOME: $JAVA_HOME"
+          java --version
+          gu --version
+          native-image --version
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build Application
+        run: ./mvnw clean package -Pnative
+
+      - name: Build and push docker image
+        uses: docker/build-push-action@v4
+        with:
+          file: src/main/docker/Dockerfile.native-micro
+          push: true
+          tags: markus/bubbleshare:latest
