Change mvnw permissions in action

--- a/.github/workflows/build-native-docker-action.yml
+++ b/.github/workflows/build-native-docker-action.yml
@@ -34,7 +34,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: Make Maven wrapper executable
+        run: chmod +x ./mvnw
       - name: Build Application
         run: ./mvnw clean package -Pnative
 
