--- a/.github/workflows/build-native-docker-action.yml
+++ b/.github/workflows/build-native-docker-action.yml
@@ -34,14 +34,16 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Make Maven wrapper executable
-        run: chmod +x ./mvnw
+
       - name: Build Application
         run: ./mvnw clean package -Pnative
+      - name: Build docker image
+        run: docker build --tag markus/bubbleshare:latest
+      - name: Push docker image
+        run: docker push ghcr.io/markus/bubbleshare:latest
 
-      - name: Build and push docker image
-        uses: docker/build-push-action@v4
-        with:
-          file: src/main/docker/Dockerfile.native-micro
-          push: true
-          tags: markus/bubbleshare:latest
+#      - name: Build and push docker image
+#        uses: docker/build-push-action@v4
+#        with:
+#          push: true
+#          tags: markus/bubbleshare:latest
