--- a/.github/workflows/build-native-docker-action.yml
+++ b/.github/workflows/build-native-docker-action.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - master
+
+env:
+  IMAGE_NAME: bubbleshare
+  VERSION: latest
+
 jobs:
   native_build:
     runs-on: ubuntu-latest
@@ -39,9 +44,12 @@ jobs:
       - name: Build Application
         run: ./mvnw clean package -Pnative
       - name: Build docker image
-        run: docker build . --tag markus/bubbleshare:latest
+        run: docker build . --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
       - name: Push docker image
-        run: docker push markus/bubbleshare:latest
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
 
 #      - name: Build and push docker image
 #        uses: docker/build-push-action@v4
