--- a/.github/workflows/build-native-docker-action.yml
+++ b/.github/workflows/build-native-docker-action.yml
@@ -48,6 +48,8 @@ jobs:
       - name: Push docker image
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
 
